--- a/index.html
+++ b/index.html
@@ -59,9 +59,34 @@
             </nav>
             <!-- Introduction -->
             <div class="row d-flex flex-column align-items-center text-white">
-                <figure class="col-8 col-md-4 my-3">
-                    <img src="./images/profile-photo.jpg" class="img-fluid rounded-circle border border-dark">
-                </figure>
+                <div class="col-8 col-md-6 mx-auto">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./images/profile-photo_original1.jpg" class="d-block w-100 img-fluid rounded-circle border border-dark">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/profile-photo_original2.jpg" class="d-block w-100 img-fluid rounded-circle border border-dark">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./images/profile-photo_original3.jpg" class="d-block w-100 img-fluid rounded-circle border border-dark">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </button>
+                    </div>
+                </div>
                 <h1 class="my-3">Masahiro Kaga</h1>
                 <h3 class="my-3">Full Stack Web Developper</h3>
                 <p class="col-12 col-md-8 mb-5">Thank you for visiting my portfolio website. I graduated Computer Science course at Langara College. My passionate is to make React app with a couple of tools such as express.js, next.js, Bootstrap and so on. However, new technology always temptate me to learn more and practice these tools! These days, I am interested in Flutter by the way, and eager to learn soon. I have an experience as a Jr web developer (php and Wordpress) in Japan for a year. Thus, I guarantee and am happy to contribute my skills to your team! Thank you!(^^)</p>
@@ -161,18 +186,23 @@
     <!-- 
 
 
+
+ -->
+        <!-- 
+
+
     -->
-    <!-- BootStrap -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-    <script>
-    setTimeout(() => {
-        document.getElementById('splash').classList.add('fade');
-    }, 2000);
-    setTimeout(() => {
-        document.getElementById('splash').remove();
-    }, 4000);
-    </script>
+        <!-- BootStrap -->
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+        <script>
+        setTimeout(() => {
+            document.getElementById('splash').classList.add('fade');
+        }, 2000);
+        setTimeout(() => {
+            document.getElementById('splash').remove();
+        }, 4000);
+        </script>
 </body>
 
 </html>
