--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@300;400&family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <!-- BootStrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
     <!-- Original CSS -->
     <link rel="stylesheet" type="text/css" href="./index.css">
     <!-- <style type="text/css"></style> -->
@@ -65,9 +68,13 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
+                                <img src="./images/kitkatman.png" class="d-block w-100 img-fluid rounded-circle border border-dark">
+                            </div>
+                            <div class="carousel-item">
                                 <img src="./images/profile-photo_original1.jpg" class="d-block w-100 img-fluid rounded-circle border border-dark">
                             </div>
                             <div class="carousel-item">
@@ -177,8 +184,8 @@
         </div>
     </main>
     <!-- Footer -->
-    <footer class="p-3 bg-primary mt-5">
-        <p class="text-center text-white">Masahiro Kaga</p>
+    <footer class="bg-dark py-3">
+        <p class="text-center text-white">Masahiro Kaga / Kitkat CEO</p>
         <p class="text-center text-white">
             &copy;Copy right, no pirates of caribian
         </p>
@@ -188,13 +195,10 @@
 
 
  -->
-        <!-- 
-
-
-    -->
         <!-- BootStrap -->
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+        <!-- Javascript for splash -->
         <script>
         setTimeout(() => {
             document.getElementById('splash').classList.add('fade');
