--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Masa's Portfolio</title>
     <!-- Favicon -->
-    <link rel=”icon” type="image/x-icon" href=“./images/favicon.ico”>
+    <link rel="icon" href="./images/favicon.ico">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -192,7 +192,7 @@
         <!-- Contact -->
         <div class="row p-5" id="contacts">
           <div class="col-12 col-md-6 my-5">
-            <h2 class="text-center mb-4">Don't Visit Me!</h2>
+            <h2 class="text-center mb-4">Visit Me, anytime!</h2>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10598.16727447769!2d-123.1119159068352!3d49.256984967590405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x548673ef21a4f88d%3A0x366bb820af27e30c!2s482%20W%2017th%20Ave%2C%20Vancouver%2C%20BC%20V5Y%202A2!5e0!3m2!1sja!2sca!4v1639704691032!5m2!1sja!2sca"
               frameborder="0"
@@ -228,7 +228,7 @@
             </div>
           </div>
           <div class="col-12 col-md-6 my-5">
-            <h2 class="text-center mb-4">BUT Contact Me!</h2>
+            <h2 class="text-center mb-4">Contact Me!(Now it doesn't work)</h2>
             <form>
               <div class="form-group">
                 <label for="txt-username">Name:</label>
@@ -268,9 +268,9 @@
     </main>
     <!-- Footer -->
     <footer class="bg-dark py-3">
-      <p class="text-center text-white">Masahiro Kaga / Kitkat CEO</p>
+      <p class="text-center text-white">Masahiro Kaga / Web developer</p>
       <p class="text-center text-white">
-        &copy;Copy right, no pirates of caribian
+        &copy;Copy right, no pirates.
       </p>
     </footer>
     <!-- 
