--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Fade in welcome message at the beginning  -->
     <div
       id="splash"
-      class="d-flex flex-column justify-content-center align-items-center"
+      class="d-flex flex-column justify-content-center align-items-center text-center"
     >
       <h1>Welcome to Masa's page</h1>
     </div>
@@ -61,13 +61,12 @@
         </svg></button
     ></a>
     <!-- Header -->
-    <header class="mb-3">
-      <nav class="container-fluid" id="landing" style="height: 100vh">
+    <header class="mb-3 container-fluid" id="landing" style="height: 100vh">
         <!-- navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark py-3" id="navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark py-3 " id="navbar">
           <a class="navbar-brand" href="#">
             <h2>Masa's portfolio</h2>
-          </a>
+          </a> 
           <button
             class="navbar-toggler"
             type="button"
@@ -101,7 +100,7 @@
           <div class="profile-image-frame">
             <img
             src="./images/profile_masa.png"
-            class="gray"
+            class="profilePic"
             alt="My profile pic"
             />
           </div>
@@ -117,8 +116,7 @@
               to your team! Thank you!(^^)
             </p>
           </div>
-        </div>
-      </nav>
+      </div>
     </header>
     <!-- Main section-->
     <main>
